Bug 476433 - Plasma gives two notifications when WiFi router goes down, there should be just one
Summary: Plasma gives two notifications when WiFi router goes down, there should be ju...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-01 20:03 UTC by Bharadwaj Raju
Modified: 2024-12-23 18:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the notifications (36.67 KB, image/png)
2023-11-01 20:03 UTC, Bharadwaj Raju
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bharadwaj Raju 2023-11-01 20:03:01 UTC
Created attachment 162800 [details]
Screenshot of the notifications

SUMMARY
When your WiFi router goes down / out of range / whatever, you get two notifications from Plasma about it.


STEPS TO REPRODUCE
1. Be connected to WiFi
2. Turn off your router
3. Wait

OBSERVED RESULT
Two notifications: one about "connection deactivated" and one "the WiFi network could not be found".

EXPECTED RESULT
Only one notification.
Comment 1 Bug Janitor Service 2023-11-02 14:08:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/302
Comment 2 Bharadwaj Raju 2023-11-08 15:01:26 UTC
Git commit 19d60985b1e58ece35091b4c21c75bacbecf3a39 by Bharadwaj Raju.
Committed on 08/11/2023 at 16:01.
Pushed by bharadwaj-raju into branch 'master'.

Don't show the SsidNotFound notification

As far as I know this notification only comes up simultaneously with the
"Connection deactivated" notification, so when the WiFi network goes down
we end up showing two notifications for what is really one event, which
doesn't look good.

![Screenshot of the two notifications](https://bugsfiles.kde.org/attachment.cgi?id=162800)

M  +1    -2    kded/notification.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/19d60985b1e58ece35091b4c21c75bacbecf3a39
Comment 3 Ben Cooksley 2024-12-23 18:26:01 UTC
Bulk transfer as requested in T17796