Don't show the SsidNotFound notification

As far as I know this notification only comes up simultaneously with the
"Connection deactivated" notification, so when the WiFi network goes down
we end up showing two notifications for what is really one event, which
doesn't look good.

![Screenshot of the two notifications](https://bugsfiles.kde.org/attachment.cgi?id=162800)

BUG: 476433